🔨 Refactor: 메인 전시회 로직 개선(정렬 기준 및 D-day 계산 적용)